# agent-moderails

./: .gitignore  Dockerfile.test  README.md  pyproject.toml
docs/: cli.md  context.md  development.md  flows.md  installation.md  modes.md
moderails/: __init__.py  cli.py  config.py  history.json
moderails/cli/: __init__.py  admin.py  agent.py  alias.py  common.py  context.py  daemon.py  epic.py  flow.py  mode.py  run.py  task.py  ui.py
moderails/db/: __init__.py  database.py  migrations.py  models.py
moderails/defaults/: complete.md  flows.json  start.md
moderails/flows/: react-js.json  ripper-5.json
moderails/modes/: __init__.py  abort.md  archive.md  brainstorm.md  complete.md  execute.md  fast.md  onboard.md  plan.md  research.md  start.md
moderails/rules/: __init__.py  abort.md  archive.md  brainstorm.md  close.md  complete.md  execute.md  plan.md  research.md  start.md
moderails/services/: __init__.py  agent.py  context.py  daemon.py  epic.py  flow.py  gate.py  github.py  history.py  run.py  session.py  task.py  worktree.py
moderails/templates/: __init__.py  archive-template.md  context-readme.md  gitignore-private.txt  gitignore.txt  moderails.md  task-template.md
moderails/ui/: __init__.py  server.py
moderails/utils/: __init__.py  context.py  formatting.py  (+3 more)
scripts/: install.sh  test.sh
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_context.py  test_context_service.py  test_database.py  test_git_utils.py  test_history_service.py  test_migrations.py  test_mode_templates.py  test_models.py  test_services.py
(+9 files in other folders)
