[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moderails"
version = "0.1.0"
description = "Structured agent workflow with persistent memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
moderails = "moderails.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["moderails"]

[tool.hatch.build.targets.wheel.force-include]
"moderails/rules" = "moderails/rules"

[tool.hatch.build]
include = [
    "moderails/**/*.py",
    "moderails/**/*.md",
]
